// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`new:component with example code and with state generates expected C.stories.tsx contents 1`] = `
"import { storiesOf } from \\"@storybook/react-native\\"
import React from \\"react\\"
import { C } from \\"./C\\"

storiesOf(\\"C\\", module).add(\\"example\\", () => <C name=\\"C\\" />)
"
`;

exports[`new:component with example code and with state generates expected C.test.tsx contents 1`] = `
"import { fireEvent, render } from \\"@testing-library/react-native\\"
import React from \\"react\\"
import { C } from \\"./C\\"

describe(\\"C\\", () => {
  it(\\"name prop is rendered\\", () => {
    // Arrange
    const message = \\"Hi, my name is C!\\"

    // Act
    const { getByText } = render(<C name=\\"C\\" />)
    const received = getByText(message)

    // Assert
    expect(received).toBeDefined()
  })

  it(\\"has correct message before pressing\\", () => {
    // Arrange
    const message = \\"You clicked 0 times\\"

    // Act
    const { getByText } = render(<C name=\\"C\\" />)
    const received = getByText(message)

    // Assert
    expect(received).toBeDefined()
  })

  it(\\"has correct message after pressing\\", () => {
    // Arrange
    const buttonText = \\"Click Me\\"
    const message = \\"You clicked 1 times\\"

    // Act
    const { getByText } = render(<C name=\\"C\\" />)
    const button = getByText(buttonText)
    fireEvent.press(button)
    const received = getByText(message)

    // Assert
    expect(received).toBeDefined()
  })
})
"
`;

exports[`new:component with example code and with state generates expected C.tsx contents 1`] = `
"import React, { useState } from \\"react\\"
import { Button, StyleSheet, Text, View } from \\"react-native\\"

interface Props {
  name: string
}

export function C({ name }: Props) {
  const [count, setCount] = useState(0)

  return (
    <View style={styles.container}>
      <Text>Hi, my name is {name}!</Text>
      <Text>You clicked {count} times</Text>
      <Button onPress={() => setCount(count + 1)} title=\\"Click Me\\" />
    </View>
  )
}

const styles = StyleSheet.create({
  container: {},
})
"
`;

exports[`new:component with example code and with state generates expected README.md contents 1`] = `
"# \`<C />\`

DESCRIPTION_HERE

## Directory Structure

- \`C.stories.tsx\`: Component stories (\`npm run test:playground\`)
- \`C.test.tsx\`: Component tests (\`npm run test:unit\`)
- \`C.tsx\`: Component code
- \`index.ts\`: Component export
- \`README.md\`: Component documentation (hey, that's me!)

## Example

![C](../../../.loki/reference/chrome_C_example.png)

> Image location: [\`.loki/reference/chrome_C_example.png\`](../../../.loki/reference/chrome_C_example.png)
> 
> To regenerate: 
> 1. \`npm run test:playground\` (skip if running)
> 1. \`npm run test:visual:update -- --storiesFilter=\\"^C example\\\\$\\"\`
"
`;

exports[`new:component with example code and with state generates expected index.ts contents 1`] = `
"export { C } from \\"./C\\"
"
`;

exports[`new:component with example code but without state generates expected B.stories.tsx contents 1`] = `
"import { storiesOf } from \\"@storybook/react-native\\"
import React from \\"react\\"
import { B } from \\"./B\\"

storiesOf(\\"B\\", module).add(\\"example\\", () => <B name=\\"B\\" />)
"
`;

exports[`new:component with example code but without state generates expected B.test.tsx contents 1`] = `
"import { render } from \\"@testing-library/react-native\\"
import React from \\"react\\"
import { B } from \\"./B\\"

describe(\\"B\\", () => {
  it(\\"name prop is rendered\\", () => {
    // Arrange
    const message = \\"Hi, my name is B!\\"

    // Act
    const { getByText } = render(<B name=\\"B\\" />)
    const received = getByText(message)

    // Assert
    expect(received).toBeDefined()
  })
})
"
`;

exports[`new:component with example code but without state generates expected B.tsx contents 1`] = `
"import React from \\"react\\"
import { StyleSheet, Text, View } from \\"react-native\\"

interface Props {
  name: string
}

export function B({ name }: Props) {
  return (
    <View style={styles.container}>
      <Text>Hi, my name is {name}!</Text>
    </View>
  )
}

const styles = StyleSheet.create({
  container: {},
})
"
`;

exports[`new:component with example code but without state generates expected README.md contents 1`] = `
"# \`<B />\`

DESCRIPTION_HERE

## Directory Structure

- \`B.stories.tsx\`: Component stories (\`npm run test:playground\`)
- \`B.test.tsx\`: Component tests (\`npm run test:unit\`)
- \`B.tsx\`: Component code
- \`index.ts\`: Component export
- \`README.md\`: Component documentation (hey, that's me!)

## Example

![B](../../../.loki/reference/chrome_B_example.png)

> Image location: [\`.loki/reference/chrome_B_example.png\`](../../../.loki/reference/chrome_B_example.png)
> 
> To regenerate: 
> 1. \`npm run test:playground\` (skip if running)
> 1. \`npm run test:visual:update -- --storiesFilter=\\"^B example\\\\$\\"\`
"
`;

exports[`new:component with example code but without state generates expected index.ts contents 1`] = `
"export { B } from \\"./B\\"
"
`;

exports[`new:component without example code generates expected A.stories.tsx contents 1`] = `
"import { storiesOf } from \\"@storybook/react-native\\"
import React from \\"react\\"
import { A } from \\"./A\\"

storiesOf(\\"A\\", module).add(\\"example\\", () => <A />)
"
`;

exports[`new:component without example code generates expected A.test.tsx contents 1`] = `
"import React from \\"react\\"
import { A } from \\"./A\\"

describe(\\"A\\", () => {
  it(\\"is defined\\", () => expect(<A />).toBeDefined())

  it.todo(\`add meaningful tests 👍\`)
})
"
`;

exports[`new:component without example code generates expected A.tsx contents 1`] = `
"import React from \\"react\\"

export function A() {
  return <></>
}
"
`;

exports[`new:component without example code generates expected README.md contents 1`] = `
"# \`<A />\`

DESCRIPTION_HERE

## Directory Structure

- \`A.stories.tsx\`: Component stories (\`npm run test:playground\`)
- \`A.test.tsx\`: Component tests (\`npm run test:unit\`)
- \`A.tsx\`: Component code
- \`index.ts\`: Component export
- \`README.md\`: Component documentation (hey, that's me!)

## Example

![A](../../../.loki/reference/chrome_A_example.png)

> Image location: [\`.loki/reference/chrome_A_example.png\`](../../../.loki/reference/chrome_A_example.png)
> 
> To regenerate: 
> 1. \`npm run test:playground\` (skip if running)
> 1. \`npm run test:visual:update -- --storiesFilter=\\"^A example\\\\$\\"\`
"
`;

exports[`new:component without example code generates expected index.ts contents 1`] = `
"export { A } from \\"./A\\"
"
`;
